# Prila4

./: .gitignore  01_Ссылки_конкурентов.md  02_Анализ_дизайна.md  03_ТЗ_дизайн_приложения.md  04_ТЗ_дизайн_лендинга.md  Задачник.md  Идея.md  Исследование.md  Техническое задание.md  Требование к дизайну.md
MacroTracker/: .gitignore  DEPLOYMENT.md  DEVLOG.md  README.md  capacitor.config.ts  deploy-server.sh  deploy.sh  index.html  macros-pwa-prompt.md  package-lock.json  package.json  vite.config.ts
MacroTracker/android-twa/: .gitignore  build.gradle  twa-manifest.json
MacroTracker/server/: package-lock.json  package.json  tsconfig.json
MacroTracker/session-notes/: dev-log-2026-03-22-session2.md  dev-log-2026-03-22-session3.md  dev-log-2026-03-23.md
MacroTracker/src/: api.ts  local-db.ts  main.ts  router.ts  state.ts  styles.css  types.ts
MacroTracker/style/: DESIGN.md
QA тесты/: 2026-04-22_прод-тесты.md
Агенты/: README.md
Агенты/Маркетинг/: ads-manager.md  cmo-orchestrator.md  community-manager.md  content-producer.md  copywriter.md  graphic-designer.md  market-researcher.md  video-editor.md
Агенты/Разработка/: ai-engineer.md  backend-dev.md  cto-orchestrator.md  devops.md  frontend-dev.md  product-manager.md  prompt-engineer.md  qa-engineer.md
Агенты/Связующие/: analyst.md  growth-hacker.md  product-owner-assistant.md
Агенты/Экспертиза/: legal-compliance.md  nutrition-expert.md  ui-ux-designer.md
Маркетинг/Telegram/: 01_первый_пост_готовый.md  ИНСТРУКЦИЯ_запуск_канала.md
Маркетинг/Исследования/: 01_боли_ЦА_реальные_цитаты.md
Маркетинг/Контент/: 01_прогрев_14_дней.md
Маркетинг/Тексты/: 01_лендинг_hero_варианты.md  02_tg_посты_1-3.md  03_tg_канал_описание.md  04_email_welcome.md  05_app_store_описание.md
Отчёты CMO/: 2026-04-21_отчёт-команды.md  2026-04-22_ретро-многоагентки.md
Разработка/backend/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
Разработка/backend/app/: __init__.py  main.py
Разработка/backend/app/api/: __init__.py  auth.py  meals.py  profile.py  recognize.py
Разработка/backend/app/models/: __init__.py  schemas.py
Разработка/backend/app/services/: __init__.py  nutrition.py
Разработка/backend/supabase/migrations/: 0001_initial_schema.sql
Разработка/backend/tests/: test_nutrition.py
Разработка/Веб/: app.html  index.html  register.html
(+38 files in other folders)
