[project]
name = "gymfuel-backend"
version = "0.1.0"
description = "GymFuel AI — FastAPI backend (AI-счётчик калорий и спортпита)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "GymFuel AI Team" },
]

# === Основные зависимости (2026, современные версии) ===
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.18",      # upload фото
    "supabase>=2.9.0",                # Supabase Python client
    "httpx>=0.28.0",                  # async HTTP — USDA / OFF / Gemini
    "redis>=5.2.0",                   # кеш
    "python-jose[cryptography]>=3.3.0",   # JWT (если не Supabase)
    "passlib[bcrypt]>=1.7.4",         # хеширование паролей
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",              # структурное логирование
    "slowapi>=0.1.9",                 # rate limiting
    "tenacity>=9.0.0",                # retry для внешних API
    "orjson>=3.10.0",                 # быстрая JSON-сериализация
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.0",                  # для TestClient
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-redis>=4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# === Ruff (линтер + форматтер) ===
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "A", "C4", "T20", "SIM", "RUF",
]
ignore = ["E501"]   # длина строки — сам ruff format разруливает

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# === Pytest ===
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"

# === Mypy ===
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

# === Coverage ===
[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "app/main.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
